# texture-compressor

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_compression.cpp
include/texture_compressor/: common.hpp  compression.hpp  decompression.hpp  utils.hpp
src/: BC1.cpp  BC1.hpp  BC4.cpp  BC4.hpp  BC5.cpp  BC5.hpp  ColorFormat.hpp  Compression.cpp  Decompression.cpp  Utils.cpp
tests/: CMakeLists.txt  test_compression.cpp
